Added course section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="#courses" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Courses</span></a></li>
+  
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -285,7 +287,76 @@
         </div>
       </div>
     </section><!-- End Skills Section -->
+    <!-- ======= Resume Section ======= -->
+    <section id="resume" class="resume">
+      <div class="container">
 
+        <div class="section-title">
+          <h2>Resume</h2>
+        </div>
+        <div class="row">
+          <div class="col-lg-6" data-aos="fade-up">
+            <h3 class="resume-title">Summary</h3>
+            <div class="resume-item pb-0">
+              <h4>Luxiao Zheng</h4>
+              <ul>
+                <li>6168 Waterman Blvd. 1W, St. Louis, 63112</li>
+                <li>(314) 224-1829</li>
+                <li>luxiaozheng@wustl.edu</li>
+              </ul>
+            </div>
+
+            <h3 class="resume-title">Education</h3>
+            <div class="resume-item">
+              <h4>Master of Science in Computer Science</h4>
+              <h5>2021 - 2022</h5>
+              <p><em>Washington University in St. Louis, MO</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Bachelor of Science in Computer Science</h4>
+              <h4>Bachelor of Science in Chemical Engineering</h4>
+              <h5>2017 - 2021</h5>
+              <p><em>Washington University in St. Louis, MO</em></p>
+              <p>Co-director, Washington University Chemistry Tournament</p>
+              <ul>
+                <li>Organize an exec board with 5 committees</li>
+                <li>Host annual tournament with more than 300 high school participants</li>
+              </ul>
+              <p>PR chair and treasurer, Asian Music Association</p>
+              <ul>
+                <li>Hosted monthly Karaoke events with food and boba.</li>
+                <li>Wrote publications and advertisements</li>
+              </ul>
+              <p>Member of Alpha Chi Sigma, Chemistry professional fraternity</p>
+            </div>
+          </div>
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="resume-title">Internship Experience</h3>
+            <div class="resume-item">
+              <h4>C++ Software Engineer</h4>
+              <h5>May 2021 - Present</h5>
+              <p><em>TuSimple Inc, Remote, US </em></p>
+              <ul>
+                <li>Designed and developed a software performance visualization dashboard using Python with Dash</li>
+                <li>Profiled and optimized the performance of TuSimple’s autonomous driving planner with C++ </li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>DevOps Intern</h4>
+              <h5>June 2019 - August 2019</h5>
+              <p><em>NeuVector Inc, San Jose, CA</em></p>
+              <ul>
+                <li>Developed Java with Selenium User Interface Automation test framework for more than 3,000 cases for
+                  NeuVector’s container network security product (relied on by more than 10 technology companies)</li>
+                <li>Programmed 19 types of test cases using Java with Selenium and Bash; found 20 bugs in existing code</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section><!-- End Resume Section -->
+
+    <!-- ======= Courses Section ======= -->
     <section id = "courses" class="courses">
       <div class='container'>
         <div class="section-title">
@@ -391,75 +462,7 @@
           <li>Academic Achievement Sophomore Award, April 2019</li>
         </ul>
       </div>
-    </section>
-    <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Resume</h2>
-        </div>
-        <div class="row">
-          <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Summary</h3>
-            <div class="resume-item pb-0">
-              <h4>Luxiao Zheng</h4>
-              <ul>
-                <li>6168 Waterman Blvd. 1W, St. Louis, 63112</li>
-                <li>(314) 224-1829</li>
-                <li>luxiaozheng@wustl.edu</li>
-              </ul>
-            </div>
-
-            <h3 class="resume-title">Education</h3>
-            <div class="resume-item">
-              <h4>Master of Science in Computer Science</h4>
-              <h5>2021 - 2022</h5>
-              <p><em>Washington University in St. Louis, MO</em></p>
-            </div>
-            <div class="resume-item">
-              <h4>Bachelor of Science in Computer Science</h4>
-              <h4>Bachelor of Science in Chemical Engineering</h4>
-              <h5>2017 - 2021</h5>
-              <p><em>Washington University in St. Louis, MO</em></p>
-              <p>Co-director, Washington University Chemistry Tournament</p>
-              <ul>
-                <li>Organize an exec board with 5 committees</li>
-                <li>Host annual tournament with more than 300 high school participants</li>
-              </ul>
-              <p>PR chair and treasurer, Asian Music Association</p>
-              <ul>
-                <li>Hosted monthly Karaoke events with food and boba.</li>
-                <li>Wrote publications and advertisements</li>
-              </ul>
-              <p>Member of Alpha Chi Sigma, Chemistry professional fraternity</p>
-            </div>
-          </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Internship Experience</h3>
-            <div class="resume-item">
-              <h4>C++ Software Engineer</h4>
-              <h5>May 2021 - Present</h5>
-              <p><em>TuSimple Inc, Remote, US </em></p>
-              <ul>
-                <li>Designed and developed a software performance visualization dashboard using Python with Dash</li>
-                <li>Profiled and optimized the performance of TuSimple’s autonomous driving planner with C++ </li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>DevOps Intern</h4>
-              <h5>June 2019 - August 2019</h5>
-              <p><em>NeuVector Inc, San Jose, CA</em></p>
-              <ul>
-                <li>Developed Java with Selenium User Interface Automation test framework for more than 3,000 cases for
-                  NeuVector’s container network security product (relied on by more than 10 technology companies)</li>
-                <li>Programmed 19 types of test cases using Java with Selenium and Bash; found 20 bugs in existing code</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section><!-- End Resume Section -->
+    </section><!--End Courses Section-->
 
     <!-- ======= Portfolio Section ======= -->
     <!--
