--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Luxiao Zheng</a></h1>
+        <h1 class="text-light text-center"><a href="index.html">Luxiao Zheng</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.facebook.com/profile.php?id=100010808449252" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/zhengluxiao/" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -62,7 +62,6 @@
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#courses" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Courses</span></a></li>
-  
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -168,9 +167,7 @@
               <p><strong>Followers</strong> of my personal WeChat blog</p>
             </div>
           </div>
-
         </div>
-
       </div>
     </section>
     <!-- End Facts Section -->
@@ -287,10 +284,10 @@
         </div>
       </div>
     </section><!-- End Skills Section -->
+
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
       <div class="container">
-
         <div class="section-title">
           <h2>Resume</h2>
         </div>
@@ -357,8 +354,8 @@
     </section><!-- End Resume Section -->
 
     <!-- ======= Courses Section ======= -->
-    <section id = "courses" class="courses">
-      <div class='container'>
+    <section id = "courses">
+      <div class="container">
         <div class="section-title">
           <h2>Courses</h2>
           <p>These are the list of courses that I have taken. Courses in bold indicates the courses that I have been a Teaching Assistant.</p>
