--- a/index.html
+++ b/index.html
@@ -358,44 +358,48 @@
       <div class="container">
         <div class="section-title">
           <h2>Courses</h2>
-          <p>These are the list of courses that I have taken. Courses in bold indicates the courses that I have been a Teaching Assistant.</p>
-          <p><b>Fun fact:</b> I am good at reciting the course listing, so all the below listing is type-written with no reference</p>
+          <p>Here are the list of some courses that I have taken and the methods and concepts that I have learned from the courses. Courses in bold indicates the courses that I have been a Teaching Assistant.
+            The color does not mean anything. It only means that the course website is public and you may click to look at more detailed information.
+          </p>
+          <p><b>Fun fact:</b> I am good at reciting the course listing, so all the below listing and the major topic description is type-written with no reference.</p>
         </div>
-        <div class = "row content">
-          <div class="col-lg-6 content">
+        <div class = "row">
+          <div class="col-lg-6" data-aos="fade-up">
             <h4>Computer Science</h4>
             <ul>
               <li><a href="https://classes.cec.wustl.edu/~SEAS-SVC-CSE132/">CSE 132 Introduction to Computer Engineering</a></li>
               <ul>
                 <li>Arduino C</li>
                 <li>Finite State Machine</li>
-                <li>Data Rrepresentation</li>
+                <li>Information Representation</li>
                 <li>Signal Transmission</li>
-                <li>Assembly</li>
+                <li>Delta Timing</li>
+                <li>Assembly Code</li>
               </ul>
               <li><b><a href="https://sites.wustl.edu/neumann/courses/cse217a/">CSE 217A Introduction to Data Science</a></b></li>
               <ul>
                 <li>Python</li>
                 <li>Packages: numpy, pandas, keras, matplotlib, seaborn, sklearn</li>
-                <li>Linear regression, Logistics regression, nearest neighbors</li>
-                <li>Decision Tree, Random Forest, Neural Network</li>
+                <li>Implement Linear regression, Logistics regression, nearest neighbors</li>
+                <li>Implement Decision Tree, Random Forest, Neural Network, feature selection</li>
+                <li>Data Science workflow</li>
               </ul>
               <li><b><a href = "https://www.cse.wustl.edu/~cosgroved/courses/cse231/s20/">CSE 231S Introduction to Parallel and Concurrent Programming</a></b></li>
               <ul>
                 <li>Java</li>
                 <li>Async, join, futures, threads</li>
                 <li>Data racing and atomocity</li>
-                <li>Implement Parallel N-queens, Quicksort, Map-Reduce</li>
+                <li>Implement Parallel N-queens, Hashmap, Quicksort, Map-Reduce</li>
               </ul>
-              <li>CSE 247 Data Structures and Algorithms</li>
+              <li><a href = "https://classes.engineering.wustl.edu/2018/fall/cse247/">CSE 247 Data Structures and Algorithms</a></li>
               <ul>
                 <li>Java</li>
                 <li>Big-O notation and asymptotic analysis</li>
                 <li>Recurrence, Master Method</li>
-                <li>Hashmap and hashtable, heap, binary search tree</li>
+                <li>Hashmap, hashtable, heap, binary search tree</li>
                 <li>Dijkstra's algorithm, mergesort, Graph Search</li>
               </ul>
-              <li><b>CSE 332S Object-Oriented Programming Laboratory</b></li>
+              <li><b><a href="https://sites.wustl.edu/shidalj/cse-332s-504n-object-oriented-software-development-laboratory/">CSE 332S Object-Oriented Programming Laboratory</a></b></li>
               <ul>
                 <li>C++</li>
                 <li>Pointers and References</li>
@@ -418,34 +422,203 @@
                 <li>Cache and Dynamic Memory Allocators</li>
                 <li>x86-64 compiler and debuggers</li>
               </ul>
-              <li>CSE 411A AI and Society: Python</li>
-              <li><b>CSE 417T Introduction to Machine Learning: MATLAB/Python</b></li>
-              <li>CSE 427S Cloud Computing with Big Data Application:Python/Docker/Kubernetes/Flask/AWS/S3/Spark/SQL/Linux</li>
+              <li>CSE 411A AI and Society</li>
+              <ul>
+                <li>Python</li>
+                <li>Social Network Analysis, Deferred Acceptance, Top Trading Cycle</li>
+                <li>Recommended System, Autonomous Driving, Linear Programming</li>
+                <li>Fairness Measurements, Adversarial Attacks in AI models</li>
+              </ul>
+              <li><b><a href="https://www.cse.wustl.edu/~sanmay/teaching/cse417-spring19/">CSE 417T Introduction to Machine Learning</a></b></li>
+              <ul>
+                <li>MATLAB as a student, pilot Python version as a TA</li>
+                <li>Perceptron Learning, VC-dimension</li>
+                <li>Training error, testing error, cross-validation</li>
+                <li>Linear Regression, Logistic Regression</li>
+                <li>Entropy, ID3, Information Gain, Decision Tree</li>
+                <li>Boosting and bagging, AdaBoost, Random Forest, Support Vector Machine, Back-propagation</li>
+              </ul>
+              <li>CSE 427S Cloud Computing with Big Data Application</li>
+              <ul>
+                <li>Amazon Web Service, Docker, Kubernetes, Linux</li>
+                <li>EC2, Boto3, Amazon S3, AWSCli</li>
+                <li>Spark, Flask, MySQL, MongoDB, Query Optimization</li>
+                <li>Project: Stock Price Visualization and Prediction based on Tweet word cloud</li>
+              </ul>
               <li>CSE 450A Video Game Programming</li>
-              <li>CSE 511A Introduction to Artificial Intelligence: Python</li>
-              <li>CSE 515T Bayesian Methods in Machine Learning: Python/MATLAB </li>
-              <li>CSE 530S Database Management System: Java</li>
-              <li>CSE 541T Advanced Algorithms: Proof/LaTex</li>
+              <ul>
+                <li>Unity, C#</li>
+                <li>Project: Untitled Cat Game with multiple levels</li>
+              </ul>
+              <li><a href="https://www.cse.wustl.edu/~garnett/cse511a/">CSE 511A Introduction to Artificial Intelligence</a></li>
+              <ul>
+                <li>Python</li>
+                <li>BFS, DFS, A* Search, constraint satisfaction, Minimax, Expectimax</li>
+                <li>Markov Decision Problem, Q-learning, Bellman's Equation</li>
+                <li>Project: Python Pacman AI</li>
+              </ul>
+              <li><a href="https://www.cse.wustl.edu/~garnett/cse515t/fall_2019/">CSE 515T Bayesian Methods in Machine Learning</a></li>
+              <ul>
+                <li>Python and MATLAB</li>
+                <li>Bayesian's Theorem, Bayesian Linear Regression, Bayesian Logistic Regression</li>
+                <li>Kernel functions, Gaussian Process Models, Hyperparameter Optimization, Bayesian Optimization</li>
+                <li>Project: Bayesian non-linear optimization and hyperparameter optimization</li>
+              </ul>
+              <li>CSE 530S Database Management System</li>
+              <ul>
+                <li>Java</li>
+                <li>Heap Pages and Heap files</li>
+                <li>SQL, Relations, Relational Operators</li>
+                <li>Primary Index, B+ Trees</li>
+                <li>Synchronization and Distributed Databases</li>
+                <li>Project: Java Database</li>
+              </ul>
+              <li><b>CSE 541T Advanced Algorithms</b></li>
+              <ul>
+                <li>Greedy Algorithm, Higher-dimensional Dynamic Programming</li>
+                <li>NP-complete, reductions</li>
+                <li>Linear Programming, LP duality, LP application in Approximation</li>
+              </ul>
+              <li>ESE 326: Engineering Probability and Statistics</li>
+              <ul>
+                <li>Probability Theorems and Proof, Bayesian Theorem, Combinations and Permutations</li>
+                <li>Discrete probability distributions: Binomial, Geometric, Poisson.</li>
+                <li>Continuous probability distributions: Exponential, Gamma, Normal, Student-T, Chi-Squared, F, etc.</li>
+                <li>Mean, Variance, Co-variance, Joint-distirbution, marginal probability</li>
+                <li>Confidence Interval and Hypothesis Testing</li>
+              </ul>
+              <li>CSE 422S Operating System(Provisioned)</li>
+              <li>CSE 532S Advanced Multi-paradigm Software Development(Provisioned)</li>
+              <li>CSE 546T Computational Geometry(Provisioned)</li>
             </ul>
           </div>
-          <div class="col-lg-6 content">
-            <h4>Chemical Engineering</h4>
+          <div class="col-lg-6" data-aos="fade-up">
+            <h4>Chemical Engineering and Mathematics</h4>
             <ul>
               <li>EECE 101: Introduction to Energy, Environmental and Chemical Engineering</li>
+              <ul>
+                <li>Project: Renewable energy station</li>
+                <li>Project: Manufacturing xylene</li>
+              </ul>
               <li>EECE 201: Engineering Analysis of Chemical Systems</li>
+              <ul>
+                <li>Mass Balance</li>
+                <li>Recycle System, System with reaction</li>
+              </ul>
               <li>EECE 203/204: Thermodynamics I/II</li>
-              <li>EECE 202: Computational Modeling in EECE: MATLAB</li>
+              <ul>
+                <li>Ideal Gas Law</li>
+                <li>General Energy Balance</li>
+                <li>Enthalpy, Entropy, Phase Change, Steam Table</li>
+                <li>Efficiency, Pumps, Compressors, Refrigeration Cycle</li>
+                <li>Raoult's Law,Clausius-Clapeyron equation </li>
+                <li>Equation of State, Activity, VLE, LLE</li>
+                <li>Chemical Reaction Equilibrium, Surface Activity</li>
+              </ul>
+              <li>EECE 202: Computational Modeling in EECE</li>
+              <ul>
+                <li>MATLAB: Array, Variable, Loop, Conditional, Plot</li>
+                <li>Numerical Methods: regression, optimization, root-finding, differential, integration, differential equation solver</li>
+                <li>Project: Verification of Clausius-Clapeyron equation from steam table</li>
+              </ul>
               <li>EECE 301: Fluid Mechanics</li>
+              <ul>
+                <li>Fluid, compressibility, continuity, viscosity</li>
+                <li>Reynold's Number</li>
+                <li>Bernoulli's Equation</li>
+                <li>Frictional factor, internal and external flow profile analysis</li>
+                <li>Navier-Stoke's Equation</li>
+                <li>Nondimensional Groups</li>
+              </ul>
               <li><b>EECE 302: Mass Transfer</b></li>
+              <ul>
+                <li>Differential Equation of Mass Transfer</li>
+                <li>Molecular Diffusion, Diffusivity</li>
+                <li>Diffusion in 1-D, 2-D, sperical systems</li>
+                <li>Convection, Boundary Layer, correlations</li>
+                <li>Overall mass transfer coefficient</li>
+              </ul>
               <li>EECE 303: Heat Transfer</li>
+              <ul>
+                <li>Conduction, Convection, Radiation</li>
+                <li>Differential Equation of heat transfer</li>
+                <li>Finite Difference Equations</li>
+                <li>Heat Exchanger Designs, LTMD and &#949-NTU</li>
+                <li>Boiling and Condensation</li>
+                <li>Reynold's Analogy</li>
+                <li>Project: Modeling of heat transfer in hotdog and charcoal position optimization</li>
+              </ul>
               <li>EECE 304: Mass Transfer Operations</li>
+              <ul>
+                <li>VLE, Flash Distillation Design, multi-stage distillation, batch distillation</li>
+                <li>McCabe-Thiele Methods</li>
+                <li>Equilibrium, Stripping, Rectifying and feed lines </li>
+                <li>FUG method, Packed-Bed Column design</li>
+                <li>Extensive use of MATLAB and ASPEN HYSYS models</li>
+              </ul>
               <li>EECE 305: Materials Science</li>
+              <ul>
+                <li>Stress, strain, elasticity</li>
+                <li>Crystal Structures</li>
+                <li>Polymers, ceramics and composites</li>
+              </ul>
               <li>EECE 311: Green Engineering</li>
+              <ul>
+                <li>Property Estimation</li>
+                <li>Compartmental Modeling and multi-media fugacity modeling</li>
+                <li>Heat Exchanger Network and Mass Exchange Network</li>
+                <li>Emission estimation and environmental economics</li>
+                <li>Project: multimedia fugacity modeling of Fukushima nuclear waste-water dump</li>
+              </ul>
               <li>EECE 401: Process Dynamics and Control</li>
+              <ul>
+                <li>Transfer Function, Laplace Transform</li>
+                <li>Closed and Open-Loop System</li>
+                <li>Feedback and feedforward controllers, PID-control</li>
+                <li>Design of controllers using simulink and MATLAB</li>
+              </ul>
               <li>EECE 402: ChE CapStone</li>
+              <ul>
+                <li>Process Flow Diagrams, P&ID Diagrams, Engineering Databases and Economics Principles</li>
+                <li>Project: Design and Analysis of the manufacturing of dimethyl ether</li>
+                <li>Roles: Leader, Design and Documentation Engineer</li>
+                <li>Research literatures on the reaction mechanism and kinetics data</li>
+                <li>Model a recycle system with multi-stage distillation columns with ASPEN Plus</li>
+              </ul>
               <li>EECE 403: Chemical Reaction Engineering</li>
+              <ul>
+                <li>Common Reaction Kinetics Model, Langmuir-Hunshelwood kinetics</li>
+                <li>Batch Reactor, CSTR, PFR, PBR design equations</li>
+                <li>Conversion, yield, selectivity, optimization of reactor volume</li>
+                <li>Reactions with heat transfer and changing volume</li>
+                <li>Internal and External Transport Limit, Catalyst Deactivation</li>
+              </ul>
               <li>EECE 405: Unit Operations Lab</li>
+              <ul>
+                <li>Laboratory: Pump and Piping System Analysis</li>
+                <li>Laboratory: Packed Bed Absorption System Analysis</li>
+                <li>Laboratory: Multi-stage Distillation Column Analysis</li>
+                <li>Engineering Lab Techniques, Statistics Analysis, Technical Writing and Scientific Presentations</li>
+              </ul>
               <li>EECE 424: Digital Process Control Lab</li>
+              <ul>
+                <li>Control of tank level, header system and heat exchanger</li>
+                <li>Implemented digital control schemes and test the results on real system</li>
+                <li>Project Report: Model-predictive Control and Application</li>
+              </ul>
+              <li>ESE 318: Engineering Math A</li>
+              <ul>
+                <li>Laplace Transform, multivariable and vector calculus</li>
+                <li>Matrix Algebra, Eigen values and vectors, systems of differential equations</li>
+              </ul>
+              <li>ESE 319: Engineering Math B</li>
+              <ul>
+                <li>Power Series, Frobenius Series, S-L problems</li>
+                <li>Legendre's Equation, Bessel's Equation, Fourier Series and Transform</li>
+                <li>2-D and 3-D heat/wave equations and general solution forms</li>
+              </ul>
+
+
             </ul>
           </div>
         </div>
