updated courses and experiences

--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software Engineer candidate</h3>
             <p class="fst-italic">
-              I have tried a lot of different Computer Science topics via WashU curriculum and practicum. I wish to specialize in C++ Development, Algorithms, Data Science and Computer Systems.
+              I have tried a lot of different Computer Science topics via WashU curriculum and practicum. 
+              I wish to specialize in C++ Development, Algorithms, Data Science and Computer Systems.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -322,7 +323,7 @@
               <p>PR chair and treasurer, Asian Music Association</p>
               <ul>
                 <li>Hosted monthly Karaoke events with food and boba.</li>
-                <li>Wrote publications and advertisements</li>
+                <li>Wrote more than 40 publications and advertisements</li>
               </ul>
               <p>Member of Alpha Chi Sigma, Chemistry professional fraternity</p>
             </div>
@@ -330,8 +331,16 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Internship Experience</h3>
             <div class="resume-item">
-              <h4>C++ Software Engineer</h4>
-              <h5>May 2021 - Present</h5>
+              <h4>Autonomous Software Deployment Intern, DriveIX</h4>
+              <h5>August 2021 - Present</h5>
+              <p><em>NVIDIA, Remote, US </em></p>
+              <ul>
+                <li>Developed a Python OpenCV pipeline to process various detection signals from camera</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>C++ Software Engineer, Software Architecture Engineering</h4>
+              <h5>May 2021 - August 2021</h5>
               <p><em>TuSimple Inc, Remote, US </em></p>
               <ul>
                 <li>Designed and developed a software performance visualization dashboard using Python with Dash</li>
@@ -438,6 +447,12 @@
                 <li>Entropy, ID3, Information Gain, Decision Tree</li>
                 <li>Boosting and bagging, AdaBoost, Random Forest, Support Vector Machine, Back-propagation</li>
               </ul>
+              <li><a href="https://www.cse.wustl.edu/~james.orr/courses/cse422/">CSE 422S Operating Systems Organization</a></li>
+              <ul>
+                <li>Raspberry Pi, C, Linux</li>
+                <li>Cross Compiling</li>
+                <li>Currently taking</li>
+              </ul>
               <li>CSE 427S Cloud Computing with Big Data Application</li>
               <ul>
                 <li>Amazon Web Service, Docker, Kubernetes, Linux</li>
@@ -479,6 +494,11 @@
                 <li>NP-complete, reductions</li>
                 <li>Linear Programming, LP duality, LP application in Approximation</li>
               </ul>
+              <li>CSE 546T Computational Geometry</li>
+              <ul>
+                <li>Convex Hull, Planar Subdivision</li>
+                <li>Currently taking</li>
+              </ul>
               <li>ESE 326: Engineering Probability and Statistics</li>
               <ul>
                 <li>Probability Theorems and Proof, Bayesian Theorem, Combinations and Permutations</li>
@@ -487,9 +507,6 @@
                 <li>Mean, Variance, Co-variance, Joint-distirbution, marginal probability</li>
                 <li>Confidence Interval and Hypothesis Testing</li>
               </ul>
-              <li>CSE 422S Operating System(Provisioned)</li>
-              <li>CSE 532S Advanced Multi-paradigm Software Development(Provisioned)</li>
-              <li>CSE 546T Computational Geometry(Provisioned)</li>
             </ul>
           </div>
           <div class="col-lg-6" data-aos="fade-up">
