--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
               <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="174" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="202" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong> Original Blog Articles</strong></p>
             </div>
           </div>
@@ -164,7 +164,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="count-box">
               <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1537" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="1920" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Followers</strong> of my personal WeChat blog</p>
             </div>
           </div>
@@ -335,7 +335,9 @@
               <h5>August 2021 - Present</h5>
               <p><em>NVIDIA, Remote, US </em></p>
               <ul>
-                <li>Developed a Python OpenCV pipeline to process various detection signals from camera</li>
+                <li>Developed a Python OpenCV pipeline to process 3d detections from DL models.</li>
+                <li>Developed and optimized a Python OpenCV pipeline to process depth inference from DL models</li>
+                <li>Reviewed and analyzed production code on multiband blending</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -450,8 +452,8 @@
               <li><a href="https://www.cse.wustl.edu/~james.orr/courses/cse422/">CSE 422S Operating Systems Organization</a></li>
               <ul>
                 <li>Raspberry Pi, C, Linux</li>
-                <li>Cross Compiling</li>
-                <li>Currently taking</li>
+                <li>Cross Compiling, Kernel Modules, CPU benchmark and profiling</li>
+                <li>Locks, Synchronizations, sockets, IO handling, signals, multithreading, CPU scheduling</li>
               </ul>
               <li>CSE 427S Cloud Computing with Big Data Application</li>
               <ul>
@@ -479,6 +481,12 @@
                 <li>Kernel functions, Gaussian Process Models, Hyperparameter Optimization, Bayesian Optimization</li>
                 <li>Project: Bayesian non-linear optimization and hyperparameter optimization</li>
               </ul>
+              <li><a href="https://sites.wustl.edu/neumann/courses/cse517a/sp19/">CSE 517A Machine Learning</a></li>
+              <ul>
+                <li>Python</li>
+                <li>Structured Risk Minimization framework, Naive Bayes model, Kernel SVM, Gaussian Process, Backpropagation and NN</li>
+                <li>Mathematics derivation and implementation of the above models</li>
+              </ul>
               <li>CSE 530S Database Management System</li>
               <ul>
                 <li>Java</li>
@@ -494,10 +502,18 @@
                 <li>NP-complete, reductions</li>
                 <li>Linear Programming, LP duality, LP application in Approximation</li>
               </ul>
+              <li>CSE 543T Algorithms of Nonlinear Optimization</li>
+              <ul>
+                <li>Lagrange Multiplier, Duality method</li>
+                <li>Student presentations on the state-of-art optimization methods like semi-definite programming, backpropagation, metric learning, etc</li>
+                <li>Presentation: Neural Network, Backpropagation, Stochastic Gradient Descent</li>
+                <li>Project: TBD</li>
+              </ul>
               <li>CSE 546T Computational Geometry</li>
               <ul>
-                <li>Convex Hull, Planar Subdivision</li>
-                <li>Currently taking</li>
+                <li>Convex Hull, Planar Subdivision, Triangulation, Plane Sweep Algorithm</li>
+                <li>Voronoi Diagram, Delauny Triangulation, Segmentation Tree, K-D Trees</li>
+                <li>Project: 3D Convex Hull algorithm with visualization</li>
               </ul>
               <li>ESE 326: Engineering Probability and Statistics</li>
               <ul>
@@ -622,6 +638,12 @@
                 <li>Control of tank level, header system and heat exchanger</li>
                 <li>Implemented digital control schemes and test the results on real system</li>
                 <li>Project Report: Model-predictive Control and Application</li>
+              </ul>
+              <li>EECE 428: Introduction to Zymurgy: Beer Brewing</li>
+              <ul>
+                <li>Group of 4 students, 3 batch of beer: Pale Ale, Summer Shandy and Belgium</li>
+                <li>Milling, Mashing, Boiling, Cooling, Fermentation and Bottling</li>
+                <li>Understand the general workflow, heat exchange and mass transfer analysis of beer brewing</li>
               </ul>
               <li>ESE 318: Engineering Math A</li>
               <ul>
