--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                 <li>Reynold's Analogy</li>
                 <li>Project: Modeling of heat transfer in hotdog and charcoal position optimization</li>
               </ul>
-              <li>EECE 304: Mass Transfer Operations</li>
+              <li><b>EECE 304: Mass Transfer Operations</b></li>
               <ul>
                 <li>VLE, Flash Distillation Design, multi-stage distillation, batch distillation</li>
                 <li>McCabe-Thiele Methods</li>
