--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                 <li>NP-complete, reductions</li>
                 <li>Linear Programming, LP duality, LP application in Approximation</li>
               </ul>
-              <li>CSE 543T Algorithms of Nonlinear Optimization</li>
+              <li><a href="https://www.cse.wustl.edu/~yixin.chen/CSE543/">CSE 543T Algorithms of Nonlinear Optimization</a></li>
               <ul>
                 <li>Lagrange Multiplier, Duality method</li>
                 <li>Student presentations on the state-of-art optimization methods like semi-definite programming, backpropagation, metric learning, etc</li>
@@ -515,18 +515,10 @@
                 <li>Voronoi Diagram, Delauny Triangulation, Segmentation Tree, K-D Trees</li>
                 <li>Project: 3D Convex Hull algorithm with visualization</li>
               </ul>
-              <li>ESE 326: Engineering Probability and Statistics</li>
-              <ul>
-                <li>Probability Theorems and Proof, Bayesian Theorem, Combinations and Permutations</li>
-                <li>Discrete probability distributions: Binomial, Geometric, Poisson.</li>
-                <li>Continuous probability distributions: Exponential, Gamma, Normal, Student-T, Chi-Squared, F, etc.</li>
-                <li>Mean, Variance, Co-variance, Joint-distirbution, marginal probability</li>
-                <li>Confidence Interval and Hypothesis Testing</li>
-              </ul>
             </ul>
           </div>
           <div class="col-lg-6" data-aos="fade-up">
-            <h4>Chemical Engineering and Mathematics</h4>
+            <h4>Chemical Engineering</h4>
             <ul>
               <li>EECE 101: Introduction to Energy, Environmental and Chemical Engineering</li>
               <ul>
@@ -645,6 +637,7 @@
                 <li>Milling, Mashing, Boiling, Cooling, Fermentation and Bottling</li>
                 <li>Understand the general workflow, heat exchange and mass transfer analysis of beer brewing</li>
               </ul>
+              <h4>Mathematics</h4>
               <li>ESE 318: Engineering Math A</li>
               <ul>
                 <li>Laplace Transform, multivariable and vector calculus</li>
@@ -655,6 +648,39 @@
                 <li>Power Series, Frobenius Series, S-L problems</li>
                 <li>Legendre's Equation, Bessel's Equation, Fourier Series and Transform</li>
                 <li>2-D and 3-D heat/wave equations and general solution forms</li>
+              </ul>
+              <li>ESE 326: Engineering Probability and Statistics</li>
+              <ul>
+                <li>Probability Theorems and Proof, Bayesian Theorem, Combinations and Permutations</li>
+                <li>Discrete probability distributions: Binomial, Geometric, Poisson.</li>
+                <li>Continuous probability distributions: Exponential, Gamma, Normal, Student-T, Chi-Squared, F, etc.</li>
+                <li>Mean, Variance, Co-variance, Joint-distirbution, marginal probability</li>
+                <li>Confidence Interval and Hypothesis Testing</li>
+              </ul>
+              <li>Math 310: Foundations for Higher Mathematics</li>
+              <ul>
+                <li>Set theory, union, joint, complement</li>
+                <li>Logic, Proof by induction, contradiction, direct proof</li>
+                <li>Construction of natural numbers, rational numbers, and basic complex number operations</li>
+                <li>Fields, closed set, open set</li>
+              </ul>
+              <li><a href="https://www.math.wustl.edu/~wick/teaching/math4111_S2022.html">Math 4111: Introduction to Analysis</a></li>
+              <ul>
+                <li>Real number systems, fields, order axioms</li>
+                <li>Topology in R^n, closed set, open set, compact and connected sets</li>
+                <li>Convergence, sequences, limits, continuous functions, metric spaces</li>
+              </ul>
+              <li><a href="https://www.math.wustl.edu/~sk/math416.html">Math 416: Complex Variables</a></li>
+              <ul>
+                <li>Complex numbers, complex roots of real functions, Euler's equation, Complex line integral</li>
+                <li>Holomorphic functions, Cauchy integral theorem, Cauchy integral formula, Cauchy estimates</li>
+                <li>Laurent series, singularities, residue calculation, integral evaluation</li>
+              </ul>
+              <li>Math 429: Linear Algebra</li>
+              <ul>
+                <li>Vector spaces, linear independence/dependence</li>
+                <li>Dimensions, nullspace, range, basis</li>
+                <li>Polynomials, linear transformations, determinants, eigenvalues</li>
               </ul>
             </ul>
           </div>
