--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
         <div class="section-title">
           <h2>Facts</h2>
           <p>I am from Nanjing, China. I am proficient in Chinese and English and have learned German for eine Semester. I like singing, cooking, writing and watching soccer. 
-          I also enjoy making friends and talking with my peers, either casually or in academics. I also enjoy writing about my life, especially
-          about food. I have founded and am maintaining a personal WeChat Official Account for 2 years. 
+          I also enjoy making friends and talking with my peers, either casually or academically. I also enjoy writing about my life, especially
+          about food. I have founded and am maintaining a personal WeChat Official Account for almost 4 years. 
           </p>
         </div>
 
@@ -140,18 +140,18 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="20" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Course Offerings</strong> I have TAed.</p>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
+          <!-- <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
               <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Bachelors</strong> in 4 years with 3.99 GPA</p>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
@@ -329,10 +329,16 @@
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="resume-title">Professional Experience</h3>
+            <div class="resume-item">
+              <h4>Incoming Deep Learning Performance Engineer, Inference</h4>
+              <h5>August 2022</h5>
+              <p><em>NVIDIA, Santa Clara, US </em></p>
+            </div>
             <h3 class="resume-title">Internship Experience</h3>
             <div class="resume-item">
               <h4>Autonomous Software Deployment Intern, DriveIX</h4>
-              <h5>August 2021 - Present</h5>
+              <h5>August 2021 - December 2021</h5>
               <p><em>NVIDIA, Remote, US </em></p>
               <ul>
                 <li>Developed a Python OpenCV pipeline to process 3d detections from DL models.</li>
@@ -381,11 +387,9 @@
               <li><a href="https://classes.cec.wustl.edu/~SEAS-SVC-CSE132/">CSE 132 Introduction to Computer Engineering</a></li>
               <ul>
                 <li>Arduino C</li>
-                <li>Finite State Machine</li>
-                <li>Information Representation</li>
-                <li>Signal Transmission</li>
-                <li>Delta Timing</li>
-                <li>Assembly Code</li>
+                <li>Finite State Machine, Information Representation</li>
+                <li>Signal transmission</li>
+                <li>Delta Timing, x86-64 Assembly code</li>
               </ul>
               <li><b><a href="https://sites.wustl.edu/neumann/courses/cse217a/">CSE 217A Introduction to Data Science</a></b></li>
               <ul>
@@ -417,6 +421,7 @@
                 <li>Dynamic Memory Allocation, smart pointers</li>
                 <li>OOP principles, inheritance</li>
                 <li>Copy Control and Design Patterns</li>
+                <li>Lab: multiple card games, Linux file systems simulator, calendar simulator</li>
               </ul>
               <li><b><a href="https://www.cse.wustl.edu/~bjuba/cse347/s20/">CSE 347 Analysis of Algorithm</a></b></li>
               <ul>
@@ -430,8 +435,8 @@
                 <li>C, Linux, Assembly</li>
                 <li>Information(int, float, array, struct, union, etc) Representations</li>
                 <li>Program Control Flows, buffer overflows</li>
-                <li>Cache and Dynamic Memory Allocators</li>
                 <li>x86-64 compiler and debuggers</li>
+                <li>Lab: Dynamic Memory Allocator, Cache Simulator</li>
               </ul>
               <li>CSE 411A AI and Society</li>
               <ul>
@@ -454,6 +459,7 @@
                 <li>Raspberry Pi, C, Linux</li>
                 <li>Cross Compiling, Kernel Modules, CPU benchmark and profiling</li>
                 <li>Locks, Synchronizations, sockets, IO handling, signals, multithreading, CPU scheduling</li>
+                <li>Lab: Multiplexed Inter-Process Communication</li>
               </ul>
               <li>CSE 427S Cloud Computing with Big Data Application</li>
               <ul>
@@ -486,6 +492,7 @@
                 <li>Python</li>
                 <li>Structured Risk Minimization framework, Naive Bayes model, Kernel SVM, Gaussian Process, Backpropagation and NN</li>
                 <li>Mathematics derivation and implementation of the above models</li>
+                <li>Project: robot decision planning model with Kaggle competition</li>
               </ul>
               <li>CSE 530S Database Management System</li>
               <ul>
@@ -527,16 +534,15 @@
               </ul>
               <li>EECE 201: Engineering Analysis of Chemical Systems</li>
               <ul>
-                <li>Mass Balance</li>
+                <li>Property estimation, Mass Balance, Energy Balance</li>
                 <li>Recycle System, System with reaction</li>
               </ul>
               <li>EECE 203/204: Thermodynamics I/II</li>
               <ul>
-                <li>Ideal Gas Law</li>
-                <li>General Energy Balance</li>
+                <li>Ideal Gas Law, General Energy Balance</li>
                 <li>Enthalpy, Entropy, Phase Change, Steam Table</li>
                 <li>Efficiency, Pumps, Compressors, Refrigeration Cycle</li>
-                <li>Raoult's Law,Clausius-Clapeyron equation </li>
+                <li>Raoult's Law, Clausius-Clapeyron equation </li>
                 <li>Equation of State, Activity, VLE, LLE</li>
                 <li>Chemical Reaction Equilibrium, Surface Activity</li>
               </ul>
@@ -549,11 +555,9 @@
               <li>EECE 301: Fluid Mechanics</li>
               <ul>
                 <li>Fluid, compressibility, continuity, viscosity</li>
-                <li>Reynold's Number</li>
-                <li>Bernoulli's Equation</li>
+                <li>Reynold's Number, Bernoulli's Equation</li>
                 <li>Frictional factor, internal and external flow profile analysis</li>
-                <li>Navier-Stoke's Equation</li>
-                <li>Nondimensional Groups</li>
+                <li>Navier-Stoke's Equation, Nondimensional Groups</li>
               </ul>
               <li><b>EECE 302: Mass Transfer</b></li>
               <ul>
@@ -569,8 +573,7 @@
                 <li>Differential Equation of heat transfer</li>
                 <li>Finite Difference Equations</li>
                 <li>Heat Exchanger Designs, LTMD and &#949-NTU</li>
-                <li>Boiling and Condensation</li>
-                <li>Reynold's Analogy</li>
+                <li>Boiling and Condensation, Reynold's Analogy</li>
                 <li>Project: Modeling of heat transfer in hotdog and charcoal position optimization</li>
               </ul>
               <li><b>EECE 304: Mass Transfer Operations</b></li>
@@ -578,7 +581,7 @@
                 <li>VLE, Flash Distillation Design, multi-stage distillation, batch distillation</li>
                 <li>McCabe-Thiele Methods</li>
                 <li>Equilibrium, Stripping, Rectifying and feed lines </li>
-                <li>FUG method, Packed-Bed Column design</li>
+                <li>FUG method, Packed-Bed Column design, ternary diagrams</li>
                 <li>Extensive use of MATLAB and ASPEN HYSYS models</li>
               </ul>
               <li>EECE 305: Materials Science</li>
@@ -597,10 +600,9 @@
               </ul>
               <li>EECE 401: Process Dynamics and Control</li>
               <ul>
-                <li>Transfer Function, Laplace Transform</li>
-                <li>Closed and Open-Loop System</li>
+                <li>Transfer Function, Laplace Transform, Closed and Open-Loop System</li>
                 <li>Feedback and feedforward controllers, PID-control</li>
-                <li>Design of controllers using simulink and MATLAB</li>
+                <li>Project: Design of controllers using simulink and MATLAB</li>
               </ul>
               <li>EECE 402: ChE CapStone</li>
               <ul>
@@ -633,7 +635,7 @@
               </ul>
               <li>EECE 428: Introduction to Zymurgy: Beer Brewing</li>
               <ul>
-                <li>Group of 4 students, 3 batch of beer: Pale Ale, Summer Shandy and Belgium</li>
+                <li>Group of 4 students, 3 batches of beer: Pale Ale, Summer Shandy and Belgium</li>
                 <li>Milling, Mashing, Boiling, Cooling, Fermentation and Bottling</li>
                 <li>Understand the general workflow, heat exchange and mass transfer analysis of beer brewing</li>
               </ul>
@@ -659,12 +661,11 @@
                 <li>Mean, Variance, Co-variance, Joint-distirbution, marginal probability</li>
                 <li>Confidence Interval and Hypothesis Testing</li>
               </ul>
-              <li>Math 310: Foundations for Higher Mathematics</li>
+              <li><a href="https://www.math.wustl.edu/~sk/math310.html">Math 310: Foundations for Higher Mathematics</a></li>
               <ul>
                 <li>Set theory, union, joint, complement</li>
                 <li>Logic, Proof by induction, contradiction, direct proof</li>
                 <li>Construction of natural numbers, rational numbers, and basic complex number operations</li>
-                <li>Fields, closed set, open set</li>
               </ul>
               <li><a href="https://www.math.wustl.edu/~wick/teaching/math4111_S2022.html">Math 4111: Introduction to Analysis</a></li>
               <ul>
