--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is Luxiao Zheng. I am a first year Master(a.k.a fifth year Bachelor) student in Washington University in St. Louis majoring in Computer Science. I have earned both Bachelor's of Science in Chemical Engineering and Bachelor of Science in Computer Science from Washington University in St. Louis with Summa Cumma Laude.</p>
+          <p>My name is Luxiao Zheng. I am a Deep Learning Performance Engineer, Inference at NVIDIA. 
+            I was a BSMS student in Washington University in St. Louis majoring in Computer Science. 
+            I earned Master of Science in Computer Science in 2022, Bachelor's of Science in Chemical Engineering and Bachelor of Science in Computer Science in 2021
+            from Washington University in St. Louis with Summa Cumma Laude.
+          </p>
         </div>
 
         <div class="row">
@@ -101,13 +105,13 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>26 April 1999</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Born:</strong> <span>Nanjing, Jiangsu, China</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Saint Louis, MO, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Santa Clara, CA, USA</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 314 224 1829</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>E-mail:</strong> <span>luxiaozheng@wustl.edu</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>WeChat:</strong> <span>zhengluxiao990426</span></li>
@@ -129,13 +133,13 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>I am from Nanjing, China. I am proficient in Chinese and English and have learned German for eine Semester. I like singing, cooking, writing and watching soccer. 
+          <p>I am from Nanjing, China. I am proficient in Chinese and English and have learned German fur eine Semester. I like singing, cooking, writing and watching soccer. 
           I also enjoy making friends and talking with my peers, either casually or academically. I also enjoy writing about my life, especially
           about food. I have founded and am maintaining a personal WeChat Official Account for almost 4 years. 
           </p>
         </div>
 
-        <div class="row no-gutters">
+        <!-- <div class="row no-gutters">
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
@@ -144,14 +148,6 @@
               <p><strong>Course Offerings</strong> I have TAed.</p>
             </div>
           </div>
-
-          <!-- <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
-            <div class="count-box">
-              <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Bachelors</strong> in 4 years with 3.99 GPA</p>
-            </div>
-          </div> -->
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
@@ -168,7 +164,7 @@
               <p><strong>Followers</strong> of my personal WeChat blog</p>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
     <!-- End Facts Section -->
@@ -298,7 +294,6 @@
             <div class="resume-item pb-0">
               <h4>Luxiao Zheng</h4>
               <ul>
-                <li>6168 Waterman Blvd. 1W, St. Louis, 63112</li>
                 <li>(314) 224-1829</li>
                 <li>luxiaozheng@wustl.edu</li>
               </ul>
@@ -331,8 +326,8 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Incoming Deep Learning Performance Engineer, Inference</h4>
-              <h5>August 2022</h5>
+              <h4>Deep Learning Performance Engineer, Inference</h4>
+              <h5>August 2022 - Present</h5>
               <p><em>NVIDIA, Santa Clara, US </em></p>
             </div>
             <h3 class="resume-title">Internship Experience</h3>
@@ -826,7 +821,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Luxiao Zheng 2021</span></strong>
+        &copy; Copyright <strong><span>Luxiao Zheng 2021-2022</span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
